Changed Font Family

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ async function add_date_text_and_color (periods) {
       nn.create("h2")
         .content(endtime)
         .css({
+            fontFamily: "Brush Script MT, cursive",
             fontSize: "15px",
             position: "relative",
             textAlign: "center",
